test/parsing/errors/multipleClassKinds.compopts
--detailed-errors # multipleClassKinds-detailed.good
--no-detailed-errors # multipleClassKinds-brief.good
